--- a/src/style/data-s-c.css
+++ b/src/style/data-s-c.css
@@ -11,6 +11,7 @@ body{
     overflow: hidden;
     margin-left: 4rem;
     margin-right: 4rem;
+    cursor: pointer;
 }
 .squar .small-circle{
     display: inline-block;
@@ -33,6 +34,7 @@ body{
     top: 3.3rem;
     left: 3.5rem;
     background-color: aliceblue;
+   
 }
 
 /* .squar.icon:hover{
@@ -60,4 +62,16 @@ body{
     /* border: 3px solid #323B4B; */
     transition: 0.3s;
     
+}
+
+.squar .icon img{
+    width: 60px;
+    position: relative;
+    left: 1.2rem;
+    top: 1.1rem;
+}
+.squar:hover .icon img{
+    width: 75px;
+    left: .8rem;
+    top: .8rem;
 }
