--- a/src/style/home-style.css
+++ b/src/style/home-style.css
@@ -54,14 +54,14 @@ body{
     padding-left: 2px;
 }
 
-.center form{
+.center .form{
     /* padding: 0 2.5rem; */
     /* box-sizing: border-box; */
     position: relative;
     padding-right: 1rem;
     margin-right: 1rem;
 }
-form .txt_field {
+.form .txt_field {
     position: relative;
     /* overflow: hidden; */
     border-bottom: 2px solid #adadad;
@@ -131,7 +131,7 @@ form .txt_field {
     color: white;
 }
 
-button[type ="submit"]{
+.form button{
     width: 130px;
     height: 35px;
     border: none;
