--- a/src/style/step-2.css
+++ b/src/style/step-2.css
@@ -1,20 +1,4 @@
-.device{
-    display: inline-block;
-    height: 4.4rem;
-    width: 4.4rem;
-    background-color: #878787;
-    border-radius: 8px;
-    margin: 10px 20px 10px 20px;
-}
-.device .deviceId{
-    
-    position: relative;
-    top: 1.4rem;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 550;
 
-}
 
 .middle-part{
     background-color: aqua;
@@ -57,5 +41,28 @@
     padding-bottom: 1rem;
     border-radius: 20px;
     
+}
+
+.device{
+    display: inline-block;
+    height: 4.4rem;
+    width: 4.4rem;
+    background-color: #878787;
+    border-radius: 8px;
+    margin: 10px 20px 10px 20px;
+}
+.device .deviceId{
     
+    position: relative;
+    top: 1.4rem;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 550;
+
+}
+
+.select .all-d:hover  .card-contain .device{
+    /* background-color: #323B4B;; */
+    background-color: red;;
+    color: red;
 }
