step-3 i/p text color

--- a/src/style/step-3.css
+++ b/src/style/step-3.css
@@ -13,6 +13,9 @@
     padding-right: 2rem;
     border-radius: 8px;
 }
+.date-picker input, select, textarea{
+    color: black;
+}
 .date-picker h1{
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
